--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -6,7 +6,7 @@
   },
   "sider": {
     "menu": {
-      "home": "Welcome",
+      "home": "Home",
       "page1": "Page 1",
       "page2": "Page 2",
       "page3": "Page 3"
