feat(frontend): 添加用户登录功能及国际化支持
- 新增登录页面组件，包含表单验证和状态管理
- 实现用户认证服务，支持登录、注销和获取用户信息
- 添加 Pinia 用户状态管理，维护当前用户状态
- 更新路由配置，添加登录页面路由
- 完善多语言支持，添加登录相关翻译
- 替换网站图标为 SVG 格式，优化显示效果
- 重构侧边栏菜单，根据登录状态动态显示用户选项

--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -7,9 +7,18 @@
   "sider": {
     "menu": {
       "home": "首页",
-      "page1": "页面1",
-      "page2": "页面2",
-      "page3": "页面3"
+      "navigations": "导航",
+      "projects": "项目",
+      "debug": "调试",
+      "user": "用户",
+      "user.login": "登录",
+      "user.profile": "个人资料",
+      "user.settings": "设置",
+      "user.logout": "退出登录",
+      "admin": "管理后台",
+      "admin.users": "用户管理",
+      "admin.navigations": "导航管理",
+      "admin.projects": "项目管理"
     },
     "ctrl": {
       "expand": "展开",
@@ -19,6 +28,15 @@
         "dark": "暗色",
         "light": "亮色"
       }
+    }
+  },
+  "login": {
+    "username": "用户名",
+    "password": "密码",
+    "success": "登录成功",
+    "validation": {
+      "usernameRequired": "请输入用户名",
+      "passwordRequired": "请输入密码"
     }
   }
 }
