--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -7,9 +7,18 @@
   "sider": {
     "menu": {
       "home": "Home",
-      "page1": "Page 1",
-      "page2": "Page 2",
-      "page3": "Page 3"
+      "navigations": "Navigations",
+      "projects": "Projects",
+      "debug": "Debug",
+      "user": "User",
+      "user.login": "Login",
+      "user.profile": "Profile",
+      "user.settings": "Settings",
+      "user.logout": "Logout",
+      "admin": "Admin",
+      "admin.users": "Users",
+      "admin.navigations": "Navigations",
+      "admin.projects": "Projects"
     },
     "ctrl": {
       "expand": "Expand",
@@ -19,6 +28,15 @@
         "dark": "Dark",
         "light": "Light"
       }
+    }
+  },
+  "login": {
+    "username": "Username",
+    "password": "Password",
+    "success": "Login successful",
+    "validation": {
+      "usernameRequired": "Please input username",
+      "passwordRequired": "Please input password"
     }
   }
 }
