--- a/frontend/src/locales/jp.json
+++ b/frontend/src/locales/jp.json
@@ -7,9 +7,18 @@
   "sider": {
     "menu": {
       "home": "ホーム",
-      "page1": "ページ1",
-      "page2": "ページ2",
-      "page3": "ページ3"
+      "navigations": "ナビゲーション",
+      "projects": "プロジェクト",
+      "debug": "デバッグ",
+      "user": "ユーザー",
+      "user.login": "ログイン",
+      "user.profile": "プロフィール",
+      "user.settings": "設定",
+      "user.logout": "ログアウト",
+      "admin": "管理",
+      "admin.users": "ユーザー管理",
+      "admin.navigations": "ナビゲーション管理",
+      "admin.projects": "プロジェクト管理"
     },
     "ctrl": {
       "expand": "展開",
@@ -19,6 +28,15 @@
         "dark": "ダーク",
         "light": "ライト"
       }
+    }
+  },
+  "login": {
+    "username": "ユーザー名",
+    "password": "パスワード",
+    "success": "ログイン成功",
+    "validation": {
+      "usernameRequired": "ユーザー名を入力してください",
+      "passwordRequired": "パスワードを入力してください"
     }
   }
 }
