style: 统一中文标点符号为全角形式
- 将代码注释中的中文句号（。）替换为全角句号（。）
- 更新本地化文件中的标点符号以保持一致性

--- a/frontend/src/locales/jp.json
+++ b/frontend/src/locales/jp.json
@@ -2,7 +2,7 @@
   "app": {
     "title": "JuFireX",
     "subtitle": "JuFireX スタジオ",
-    "description": "ゲーム創作と開発を愛するゲームスタジオ。"
+    "description": "ゲーム創作と開発を愛するゲームスタジオ. "
   },
   "sider": {
     "menu": {
