--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -2,7 +2,7 @@
   "app": {
     "title": "JuFireX",
     "subtitle": "爝火工作室",
-    "description": "是一个充满热爱与活力的游戏创意工作室。"
+    "description": "是一个充满热爱与活力的游戏创意工作室. "
   },
   "sider": {
     "menu": {
