feat: 新增博客模块并完善项目结构
- 添加博客模型、仓库和API端点
- 在数据库初始化中注册博客模型
- 前端添加博客相关路由和本地化配置
- 引入marked库用于Markdown渲染
- 移除敏感文件password.txt并添加到.gitignore
- 为密码文件添加格式注释
- 完善API文档字符串

--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -9,6 +9,7 @@
       "home": "首页",
       "navigations": "导航",
       "projects": "项目",
+      "blogs": "文章",
       "debug": "调试",
       "user": "用户",
       "user.login": "登录",
@@ -18,7 +19,8 @@
       "admin": "管理后台",
       "admin.users": "用户管理",
       "admin.navigations": "导航管理",
-      "admin.projects": "项目管理"
+      "admin.projects": "项目管理",
+      "admin.blogs": "文章管理"
     },
     "ctrl": {
       "expand": "展开",
