refactor: 移除直接消息提示并优化类型导入
- 移除多个组件中直接使用的 `useMessage`，统一由请求拦截器处理消息提示
- 将类型定义（如 Blog、Project）从服务文件移至 `@/types/models` 集中管理
- 更新登录验证提示文案，将“用户名”改为“邮箱或ID”
- 移除根组件中冗余的 `NMessageProvider` 包装
- 优化注册页面的表单验证规则，使用国际化文案

--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -43,7 +43,7 @@
     "password": "密码",
     "success": "登录成功",
     "validation": {
-      "usernameRequired": "请输入用户名",
+      "identifierRequired": "请输入邮箱或ID",
       "passwordRequired": "请输入密码"
     }
   }
