--- a/frontend/src/locales/manifests/zh-CN.json
+++ b/frontend/src/locales/manifests/zh-CN.json
@@ -4,6 +4,14 @@
     "subtitle": "爝火工作室",
     "description": "是一个充满热爱与活力的游戏创意工作室. "
   },
+  "common": {
+    "avatarCropper": {
+      "title": "裁剪头像",
+      "select": "选择图片",
+      "confirm": "确认",
+      "cancel": "取消"
+    }
+  },
   "sider": {
     "appMenu": {
       "home": "首页",
