refactor(前端): 部分统一页面标题使用$t调用并清理未使用的i18n导入
- 将多个页面中的标题翻译键从`sider.menu.*`迁移到新的`page.*`结构
- 使用`$t`替代`useI18n().t`以简化模板代码
- 移除未使用的`useI18n`导入语句
- 更新中文翻译清单以匹配新的页面标题键结构

--- a/frontend/src/locales/manifests/zh-CN.json
+++ b/frontend/src/locales/manifests/zh-CN.json
@@ -46,13 +46,65 @@
       }
     }
   },
-  "login": {
-    "username": "用户名",
-    "password": "密码",
-    "success": "登录成功",
-    "validation": {
-      "identifierRequired": "请输入邮箱或ID",
-      "passwordRequired": "请输入密码"
+  "page": {
+    "appHome": {
+      "title": "首页"
+    },
+    "navigations": {
+      "title": "导航"
+    },
+    "projects": {
+      "title": "项目"
+    },
+    "blogs": {
+      "title": "文章"
+    },
+    "apiTest": {
+      "title": "API测试"
+    },
+    "login": {
+      "title": "登录"
+    },
+    "register": {
+      "title": "注册"
+    },
+    "user": {
+      "profile": {
+        "title": "用户档案"
+      },
+      "settings": {
+        "title": "用户设置"
+      },
+      "logout": {
+        "title": "登出"
+      }
+    },
+    "admin": {
+      "users": {
+        "title": "用户管理"
+      },
+      "navigations": {
+        "title": "导航管理"
+      },
+      "projects": {
+        "title": "项目管理"
+      },
+      "blogs": {
+        "title": "文章管理"
+      }
+    },
+    "project": {
+      "overview": {
+        "title": "项目概览"
+      },
+      "fileTreeView": {
+        "title": "项目文件树"
+      }
+    },
+    "blog": {
+      "detail": {
+        "title": "文章详情"
+      }
     }
   }
 }
