feat(login): 改进登录页面UI并添加国际化支持
- 优化登录页面布局，使用栅格系统居中显示登录卡片
- 扩展中文语言包，添加登录页面相关翻译
- 统一前后端登录标识符提示为“邮箱/ID/uuid”
- 优化表单验证和按钮交互，提升用户体验

--- a/frontend/src/locales/manifests/zh-CN.json
+++ b/frontend/src/locales/manifests/zh-CN.json
@@ -63,7 +63,21 @@
       "title": "API测试"
     },
     "login": {
-      "title": "登录"
+      "title": "登录",
+      "login": "登录",
+      "register": "还没有账号? 前往注册",
+      "identifier": {
+        "label": "邮箱 / ID",
+        "placeholder": "请输入邮箱 / ID"
+      },
+      "password": {
+        "label": "密码",
+        "placeholder": "请输入密码"
+      },
+      "validation": {
+        "identifierRequired": "请输入邮箱 / ID",
+        "passwordRequired": "请输入密码"
+      }
     },
     "register": {
       "title": "注册"
