--- a/frontend/src/locales/manifests/zh-CN.json
+++ b/frontend/src/locales/manifests/zh-CN.json
@@ -2,6 +2,7 @@
   "app": {
     "title": "JuFireX",
     "subtitle": "爝火工作室",
+    "slogan": "日月出矣，而爝火不息",
     "description": "是一个充满热爱与活力的游戏创意工作室. "
   },
   "common": {
@@ -48,7 +49,18 @@
   },
   "page": {
     "appHome": {
-      "title": "首页"
+      "title": "首页",
+      "jufirex-suffix": "JuFireX",
+      "studio-suffix": "studio",
+      "slogan": "日月出矣, 而爝火不息.",
+      "scroll": "查看更多",
+      "philosophy": {
+        "title": "Philosophy",
+        "desc": "在这个巨人如日月争辉的时代\nJuFireX 犹如爝火, 虽然渺小, 却永远赤诚. \n我们追求纯粹的游戏艺术.\n我们为渴望不同体验的灵魂\n指引独一无二的旅程."
+      },
+      "showcase": {
+        "title": "Featured Works"
+      }
     },
     "navigations": {
       "title": "导航"
