feat(admin): 在用户管理页面集成 CommonTable 组件
- 新增 CommonTable 组件，提供统一的搜索、重置、刷新和分页功能
- 在用户管理页面使用 CommonTable 替换原有的简单表格，增加搜索表单和操作列
- 添加中文本地化支持，更新语言文件以包含 CommonTable 和用户管理相关文本
- 实现基于内存过滤的搜索功能，支持按用户名和角色筛选用户
- 为表格添加编辑和删除操作按钮，删除操作包含确认提示

--- a/frontend/src/locales/manifests/zh-CN.json
+++ b/frontend/src/locales/manifests/zh-CN.json
@@ -11,6 +11,19 @@
       "select": "选择图片",
       "confirm": "确认",
       "cancel": "取消"
+    },
+    "commonTable": {
+      "search": {
+        "action": {
+          "search": "查询",
+          "reset": "重置"
+        }
+      },
+      "table": {
+        "action": {
+          "reload": "刷新"
+        }
+      }
     }
   },
   "sider": {
@@ -139,7 +152,13 @@
     },
     "admin": {
       "users": {
-        "title": "用户管理"
+        "title": "用户管理",
+        "search": {
+          "title": "筛选条件"
+        },
+        "table": {
+          "title": "用户管理"
+        }
       },
       "navigations": {
         "title": "导航管理"
