feat(common-table): 增加国际化支持并优化分页配置
- 为 CommonTable 组件添加完整的国际化支持，支持中英文切换
- 增加默认分页选项 100 条/页
- 统一导入语句顺序，提升代码可读性
- 完善用户、导航、项目和文章管理的国际化字段

--- a/frontend/src/locales/manifests/en.json
+++ b/frontend/src/locales/manifests/en.json
@@ -11,6 +11,24 @@
       "select": "Select Image",
       "confirm": "Confirm",
       "cancel": "Cancel"
+    },
+    "commonTable": {
+      "search": {
+        "title": "Filter Form",
+        "action": {
+          "search": "Search",
+          "reset": "Reset"
+        }
+      },
+      "table": {
+        "title": "Data Table",
+        "action": {
+          "reload": "Reload"
+        },
+        "pagination": {
+          "prefix": "{itemCount} items total"
+        }
+      }
     }
   },
   "sider": {
