--- a/frontend/src/locales/manifests/zh-CN.json
+++ b/frontend/src/locales/manifests/zh-CN.json
@@ -14,14 +14,19 @@
     },
     "commonTable": {
       "search": {
+        "title": "筛选表单",
         "action": {
           "search": "查询",
           "reset": "重置"
         }
       },
       "table": {
+        "title": "数据表格",
         "action": {
           "reload": "刷新"
+        },
+        "pagination": {
+          "prefix": "共 {itemCount} 条"
         }
       }
     }
@@ -154,20 +159,96 @@
       "users": {
         "title": "用户管理",
         "search": {
-          "title": "筛选条件"
+          "title": "筛选条件",
+          "items": {
+            "username": "用户名",
+            "email": "邮箱",
+            "role": "角色",
+            "status": "状态"
+          }
         },
         "table": {
-          "title": "用户管理"
+          "title": "用户管理",
+          "toolbar": {
+            "add": "添加用户"
+          },
+          "columns": {
+            "username": "用户名",
+            "email": "邮箱",
+            "role": "角色",
+            "status": "状态",
+            "createdAt": "创建时间",
+            "updatedAt": "更新时间"
+          }
         }
       },
       "navigations": {
-        "title": "导航管理"
+        "title": "导航管理",
+        "search": {
+          "title": "筛选条件",
+          "items": {
+            "title": "标题",
+            "category": "分类",
+            "public": "公开"
+          }
+        },
+        "table": {
+          "title": "导航管理",
+          "toolbar": {
+            "add": "添加导航"
+          },
+          "columns": {
+            "title": "标题",
+            "path": "路径",
+            "createdAt": "创建时间",
+            "updatedAt": "更新时间"
+          }
+        }
       },
       "projects": {
-        "title": "项目管理"
+        "title": "项目管理",
+        "search": {
+          "title": "筛选条件",
+          "items": {
+            "title": "标题",
+            "tags": "标签",
+            "public": "公开"
+          }
+        },
+        "table": {
+          "title": "项目管理",
+          "toolbar": {
+            "add": "添加项目"
+          },
+          "columns": {
+            "title": "标题",
+            "createdAt": "创建时间",
+            "updatedAt": "更新时间"
+          }
+        }
       },
       "blogs": {
-        "title": "文章管理"
+        "title": "文章管理",
+        "search": {
+          "title": "筛选条件",
+          "items": {
+            "title": "标题",
+            "author": "作者",
+            "tags": "标签",
+            "public": "公开"
+          }
+        },
+        "table": {
+          "title": "文章管理",
+          "toolbar": {
+            "add": "添加文章"
+          },
+          "columns": {
+            "title": "标题",
+            "createdAt": "创建时间",
+            "updatedAt": "更新时间"
+          }
+        }
       }
     },
     "project": {
