feat(前端): 优化导航图标处理并更新用户管理界面翻译
- 将导航图标解析逻辑提取至服务层，提升代码复用性
- 增加用户管理界面列的中文翻译，包括头像、UUID、状态和操作列
- 微调通知组件模糊效果，从4px提升至6px

--- a/frontend/src/locales/manifests/zh-CN.json
+++ b/frontend/src/locales/manifests/zh-CN.json
@@ -173,12 +173,22 @@
             "add": "添加用户"
           },
           "columns": {
+            "avatar": "头像",
             "username": "用户名",
             "email": "邮箱",
+            "uuid": "UUID",
             "role": "角色",
-            "status": "状态",
+            "status": {
+              "title": "状态",
+              "active": "启用",
+              "inactive": "封禁"
+            },
             "createdAt": "创建时间",
-            "updatedAt": "更新时间"
+            "actions": {
+              "title": "操作",
+              "edit": "编辑",
+              "delete": "删除"
+            }
           }
         }
       },
