feat(admin): 优化用户管理表格显示
- 将用户头像和用户名列合并为统一的用户列，使用 CommonTag 组件展示
- 使用 CommonTag 组件重构角色和状态列，提高代码复用性
- 调整用户服务中获取头像 URL 方法的位置以保持代码组织一致性
- 更新本地化文件以匹配新的列结构并添加缺失的翻译项

--- a/frontend/src/locales/manifests/zh-CN.json
+++ b/frontend/src/locales/manifests/zh-CN.json
@@ -173,8 +173,7 @@
             "add": "添加用户"
           },
           "columns": {
-            "avatar": "头像",
-            "username": "用户名",
+            "user": "用户",
             "email": "邮箱",
             "uuid": "UUID",
             "role": "角色",
@@ -210,6 +209,13 @@
           "columns": {
             "title": "标题",
             "path": "路径",
+            "category": "分类",
+            "public": "公开",
+            "status": {
+              "title": "状态",
+              "public": "公开",
+              "private": "私有"
+            },
             "createdAt": "创建时间",
             "updatedAt": "更新时间"
           }
