feat(admin): 在导航管理页面添加所有者筛选和显示功能
- 在导航管理页面搜索表单中添加所有者UUID输入框用于筛选
- 在表格列中显示导航的所有者信息，系统创建的导航显示为"System"标签
- 更新国际化文件，添加所有者相关的中文翻译
- 扩展CommonTag组件，支持round属性以美化系统标签显示

--- a/frontend/src/locales/manifests/zh-CN.json
+++ b/frontend/src/locales/manifests/zh-CN.json
@@ -198,7 +198,8 @@
           "items": {
             "title": "标题",
             "category": "分类",
-            "public": "公开"
+            "public": "公开",
+            "owner": "所有者"
           }
         },
         "table": {
@@ -211,6 +212,7 @@
             "path": "路径",
             "category": "分类",
             "public": "公开",
+            "owner": "所有者",
             "status": {
               "title": "状态",
               "public": "公开",
