feat(admin): 调整表格布局并完善国际化文本
- 为 CommonTable 搜索卡片添加底部内边距
- 更新用户管理表格列宽和水平滚动宽度
- 重构导航管理表格，使用国际化文本并调整列宽
- 为导航管理表格添加操作按钮的国际化支持

--- a/frontend/src/locales/manifests/zh-CN.json
+++ b/frontend/src/locales/manifests/zh-CN.json
@@ -208,10 +208,11 @@
             "add": "添加导航"
           },
           "columns": {
+            "icon": "图标",
             "title": "标题",
-            "path": "路径",
+            "description": "描述",
+            "url": "链接",
             "category": "分类",
-            "public": "公开",
             "owner": "所有者",
             "status": {
               "title": "状态",
@@ -219,7 +220,12 @@
               "private": "私有"
             },
             "createdAt": "创建时间",
-            "updatedAt": "更新时间"
+            "updatedAt": "更新时间",
+            "actions": {
+              "title": "操作",
+              "edit": "编辑",
+              "delete": "删除"
+            }
           }
         }
       },
