feat(admin): 为导航管理表格添加优先级列
在导航管理页面表格中新增“优先级”列，用于显示和排序导航项的顺序。同时调整表格水平滚动宽度以适应新增列。

--- a/frontend/src/locales/manifests/zh-CN.json
+++ b/frontend/src/locales/manifests/zh-CN.json
@@ -209,6 +209,7 @@
           },
           "columns": {
             "icon": "图标",
+            "order": "优先级",
             "title": "标题",
             "description": "描述",
             "url": "链接",
